--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,21 @@
     <groupId>org.github.samples</groupId>
     <artifactId>java8_samples</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
+    <dependencies>
+
+    </dependencies>
 </project>
