--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
 
     </dependencies>
 </project>
